# ePortfolio

./: README.md  index.html  styles.css
artifacts/enhanced/: Bid.cpp  Bid.h  BidManagementServer.cpp  CMakeLists.txt  CSVparser.cpp  CSVparser.h  DatabaseManager.cpp  DatabaseManager.h  LinkedList.cpp  LinkedList.h  TOTP.h  User.h  Utils.h
artifacts/original/: CSVparser.cpp  LinkedList.cpp
narratives/: algorithms-data-structures.md  databases.md  software-design-engineering.md
